[package]
name = "aem-eye"
authors = ["zoid", "<krypt0mux@gmail.com>"]
description = "a very fast aem detection tool."
license = "MIT"
repository = "https://github.com/ethicalhackingplayground/aem-eye"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.5.1"
itertools = "0.10.5"
futures = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "^1.2.0", features = ["full"] }
spmc = "0.3.0"
clap =  { version = "^3.0.0-beta.2" }
regex = "1.7.3"
reqwest = { version = "0.11.14", features = ["native-tls", "blocking"] }